--- a/Backend/backend_code/.env-dev
+++ b/Backend/backend_code/.env-dev
@@ -1,11 +1,10 @@
 APP_NAME=Laravel
+APP_ENV=local
 APP_KEY=base64:UWKd452sP8lcGhfXnMblu4qzFTnRYjfFsWzqb48u8ZU=
+APP_DEBUG=true
+APP_URL=http://localhost
 
-APP_ENV=production
-APP_DEBUG=false
-APP_URL=https://api.fabriquepar.com
-
-SPA_URL=https://fabriquepar.com
+SPA_URL=http://localhost:5173
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
